<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#37474F"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logoo"
        android:scaleType="fitCenter"
        android:tint="#fff"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/app_slogan"
        android:layout_below="@+id/logo"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/splash_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_slogan"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center"
            android:id="@+id/reg_title"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/full_name"
            android:background="@drawable/round_fb"
            android:padding="10dp"
            android:inputType="text"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:id="@+id/fullname"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/phone"
            android:background="@drawable/round_fb"
            android:padding="10dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:inputType="number"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:id="@+id/phone_number"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:hint="@string/password"
            android:background="@drawable/round_fb"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:id="@+id/password_reg"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/confirm_password"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/round_fb"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:id="@+id/password_confm"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:background="@drawable/vet_button_login"
            android:padding="6dp"
            android:textColor="@android:color/white"
            android:id="@+id/btn_reg"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/already_have_account_sign_in_here"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:padding="5dp"
            android:textSize="19sp"
            android:id="@+id/signin_txt"
            />
    </LinearLayout>



</RelativeLayout>