<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#024027"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/logoo"
        android:scaleType="fitCenter"
        android:tint="#fff"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/app_slogan"
        android:layout_below="@+id/logo"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/splash_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/app_sloga"
        android:layout_below="@+id/app_slogan"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/splash_text_details"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"/>



    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/connect_button"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:text="@string/splash_button2"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/main_join_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_login_btn"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/login_button"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/splash_button1"
        android:textColor="@android:color/white"
        />


</RelativeLayout>