<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputs"
                android:text="@string/add_a_sick_animal"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@android:color/holo_red_dark"
                android:textAppearance="?android:textAppearanceLarge"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/animal_name"
                        android:layout_margin="8dp"
                        android:textColor="@color/white"
                        android:textAppearance="?android:textAppearanceMedium"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:textSize="20sp"
                        android:textColor="@android:color/holo_red_dark"
                        android:id="@+id/edt_name"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/breed"
                        android:textColor="@color/white"
                        android:layout_margin="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:id="@+id/edt_breed"
                        android:textSize="20sp"
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/white"
                        android:layout_margin="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:id="@+id/edt_description"
                        android:textSize="20sp"
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Image:"
                        android:textColor="@color/white"
                        android:layout_margin="10dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:id="@+id/edt_image"
                        android:background="@drawable/inputs"
                        android:text="@string/browse"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttons"
                android:text="SAVE"
                android:id="@+id/btn_save"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                />


        </LinearLayout>




</LinearLayout>